--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
 
+  <exec_depend>ros2launch</exec_depend>
   <exec_depend>rosidl_default_generators</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
