Add stop scan service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,13 @@ set(msg_files
   "msg/Angle.msg"
 )
 
+set(srv_files
+  "srv/StopScan.srv"
+)
+
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
+  ${srv_files}
 )
 
 ament_export_dependencies(rosidl_default_runtime)
