--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rosidl_default_generators</exec_depend>
